# UW-Time-Schedule-Web-Scraper

./: Dockerfile  LICENSE  README.md  cache.py  course.py  course_info.py  instructor.py  pyproject.toml  scraper.py  utils.py
