[tool.poetry]
name = "uw-time-schedule-web-scraper"
version = "0.1.0"
description = ""
authors = ["Isabel Giang <isabelgiang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.2"
boto3 = "^1.15.8"
pytest = "^6.1.0"
flake8 = "^3.8.3"
webdriver-manager = "^3.2.2"
httpx = "^0.15.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
